--- a/jupyterlabs/docker-compose.yml
+++ b/jupyterlabs/docker-compose.yml
@@ -42,15 +42,17 @@ services:
       --no-browser
       --NotebookApp.token=''
       --notebook-dir=/workspace
-#  rstudio:
-#    restart: always
-#    container_name: rstudio-container
-#    image: rocker/tidyverse:latest
-#    ports:
-#      - "8890:8787"
-#    environment:
-#      - USERNAME=rstudio
-#      - PASSWORD=rstudio
-#      - DISABLE_AUTH=true
-#    volumes:
-#      - ./rstudio/project:/home/rstudio/project
+  rstudio:
+    restart: always
+    container_name: rstudio-container
+    build:
+      context: rstudio
+      dockerfile: ./Dockerfile
+    ports:
+      - "8890:8787"
+    environment:
+      - USERNAME=rstudio
+      - PASSWORD=rstudio
+      - DISABLE_AUTH=true
+    volumes:
+      - ./rstudio/project:/home/rstudio/project
